HW3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  otushw-service
spec:
  selector:
    app: otushw_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
